; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_HalBtc8723b2Ant.c_halbtc8723b2ant_SetSwPenaltyTxRateAdaptive.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_HalBtc8723b2Ant.c_halbtc8723b2ant_SetSwPenaltyTxRateAdaptive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (%struct.TYPE_4__*, i32, i32, i32*)* }

@BIT0 = common dso_local global i32 0, align 4
@BTC_MSG_ALGORITHM = common dso_local global i32 0, align 4
@ALGO_TRACE_FW_EXEC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"[BTCoex], set WiFi Low-Penalty Retry: %s\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"ON!!\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"OFF!!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @halbtc8723b2ant_SetSwPenaltyTxRateAdaptive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @halbtc8723b2ant_SetSwPenaltyTxRateAdaptive(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [6 x i32], align 16
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = bitcast [6 x i32]* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %6, i8 0, i64 24, i1 false)
  %7 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  store i32 6, i32* %7, align 16
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load i32, i32* @BIT0, align 4
  %12 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 1
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, %11
  store i32 %14, i32* %12, align 4
  %15 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 2
  store i32 0, i32* %15, align 8
  %16 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 3
  store i32 247, i32* %16, align 4
  %17 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 4
  store i32 248, i32* %17, align 16
  %18 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 5
  store i32 249, i32* %18, align 4
  br label %19

19:                                               ; preds = %10, %2
  %20 = load i32, i32* @BTC_MSG_ALGORITHM, align 4
  %21 = load i32, i32* @ALGO_TRACE_FW_EXEC, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0)
  %26 = call i32 @BTC_PRINT(i32 %20, i32 %21, i8* %25)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32 (%struct.TYPE_4__*, i32, i32, i32*)*, i32 (%struct.TYPE_4__*, i32, i32, i32*)** %28, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %31 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %32 = call i32 %29(%struct.TYPE_4__* %30, i32 105, i32 6, i32* %31)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @BTC_PRINT(i32, i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
